# ray_tracer_challenge

./: .gitignore  Cargo.toml  clock.ppm  flake.nix
examples/: cannon.rs  clock.rs  scene.rs  silhouette.rs
pattern_editor/: .gitignore  Cargo.toml  build.ts  bun.lockb  package-lock.json  package.json  server.ts
pattern_editor/browser/: app.tsx  index.ts
pattern_editor/public/: index.html
pattern_editor/src/: lib.rs
ray_tracer/: Cargo.toml
ray_tracer/examples/: cannon.rs  clock.rs  scene.rs  silhouette.rs
ray_tracer/src/: camera.rs  canvas.rs  cone.rs  counter.rs  cube.rs  cylinder.rs  intersection.rs  lib.rs  light.rs  material.rs  matrix.rs  pattern.rs  plane.rs  ray.rs  shape.rs  sphere.rs  transformations.rs  tuple.rs  world.rs
src/: camera.rs  canvas.rs  color.rs  intersection.rs  lib.rs  material.rs  matrix.rs  pattern.rs  plane.rs  ray.rs  shape.rs  sphere.rs  transformations.rs  tuple.rs  world.rs
