# You must change these to your own details.
[package]
name = "pattern_editor"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["Collin Diekvoss <collin@diekvoss.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`.
console_error_panic_hook = "0"

nalgebra = "0"
bracket-noise = "0"
dyn-clone = "1"
nalgebra-glm = "0"

ray_tracer = { path = "../ray_tracer" }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0"
features = ["console", "Window"]

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0"
js-sys = "0"
wasm-bindgen-futures = "0"
